# cpp-coveralls

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  requirements.txt  setup.py  test.bash
coveralls/: __init__.py  coverage.py  coverage_test.py  gitrepo.py  report.py
cpp_coveralls/: __init__.py  coverage.py  coverage_test.py  gitrepo.py  parse_gcov_test.py  report.py
test-src/excluded_files/: Makefile  config.sh  foo.cpp
test-src/excluded_files/another_extra_lib/: another_toy.cpp  another_toy.h
test-src/excluded_files/extra_lib/: toy.cpp  toy.h
test-src/included_files/: config.sh  expected.json  part_unused.cpp  part_unused.h
test-src/missing_files/: Makefile  config.sh  expected_gcov.json  expected_lcov.json  foo.c  unused.cpp  unused.h
test-src/out_of_tree/: config.sh  expected.json
test-src/out_of_tree/build_tree/: Makefile
test-src/out_of_tree/source_tree/A/: a.cpp
test-src/out_of_tree/source_tree/B/: b.cpp
test-src/out_of_tree/source_tree/llib/: lib.cpp  lib.h
test-src/simple/: Makefile  expected.json
test-src/static_lib/: Makefile  config.sh  expected.json  expected_lcov_doubt_counts.json
test-src/template_includes/: A.cpp  B.cpp  Makefile  common_header.h  config.sh  expected.json
test-utils/: check_output.py  testDir.sh
tests/issue65/: Makefile.am  configure.ac  test.cpp  test.sh
tests/issue65/lib/src/: foo.cpp  foo.h
tests/simpletest/: test.bash
